--- a/package.json
+++ b/package.json
@@ -1,39 +1,27 @@
 {
   "name": "nfts-4-nature",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@zoralabs/zdk": "^2.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "description": "NFT's for nature",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anguloambiental/nfts-4-nature.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [
+    "nfts",
+    "nature"
+  ],
+  "author": "Dorian Posternak and Javier Vega",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/anguloambiental/nfts-4-nature/issues"
+  },
+  "homepage": "https://github.com/anguloambiental/nfts-4-nature#readme",
+  "dependencies": {
+    "alchemy-sdk": "^3.3.1",
+    "dotenv": "^16.4.5"
   }
 }
