--- a/nfts-4-nature/package.json
+++ b/nfts-4-nature/package.json
@@ -13,7 +13,8 @@
     "ethers": "^6.13.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "@types/node": "^20",
